--- a/.github/workflows/eshoponweb-cicd.yml
+++ b/.github/workflows/eshoponweb-cicd.yml
@@ -6,10 +6,10 @@ on: [push, workflow_dispatch]
 #Environment variables https://docs.github.com/en/actions/learn-github-actions/environment-variables
 env:
   RESOURCE-GROUP: rg-eshoponweb-entapps
-  LOCATION: uksouth
+  LOCATION: westus
   TEMPLATE-FILE: infra/webapp.bicep
   SUBSCRIPTION-ID: 0bbcb046-5783-4dd5-b5bf-c3e82a24f6d3
-  WEBAPP-NAME: eshoponweb-webapp-az400testeshop
+  WEBAPP-NAME: eshoponweb-webapp-az400testshop
 
 
 jobs:
